Fixed some Sonar warnings.